[project]
name = "shioru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.0",
    "jupyter>=1.1.1",
    "mpmath>=1.3.0",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "polars[all]>=1.33.1",
    "seaborn>=0.13.2",
]
